--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@
 *.obj filter=lfs diff=lfs merge=lfs -text
 *.mp3 filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+*.anim filter=lfs diff=lfs merge=lfs -text
