--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.febucci.custom-hierarchy": "https://github.com/febucci/unitypackage-custom-hierarchy.git",
     "com.unity.cinemachine": "2.6.11",
     "com.unity.ide.rider": "3.0.6",
     "com.unity.ide.visualstudio": "2.0.14",
