--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.performance.profile-analyzer": "1.1.1",
     "com.unity.postprocessing": "3.1.1",
     "com.unity.probuilder": "5.0.3",
+    "com.unity.terrain-tools": "3.0.2-preview.3",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "2.1.6",
     "com.unity.timeline": "1.6.3",
