--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.3.0",
     "com.unity.performance.profile-analyzer": "1.1.1",
+    "com.unity.polybrush": "1.1.3",
     "com.unity.postprocessing": "3.2.2",
     "com.unity.probuilder": "5.0.6",
     "com.unity.terrain-tools": "3.0.2-preview.3",
