--- a/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -109,7 +109,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"9ad854a064d4f0f44a7bc2d108c92361\",\"type\":2},\"prefab\":{\"fileID\":4895557568559872718,\"guid\":\"412de343437df34468da666c93a16965\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"9ad854a064d4f0f44a7bc2d108c92361\",\"type\":2},\"prefab\":{\"fileID\":5958380279236694339,\"guid\":\"fad87c94ce4ce1a478ed85baa8e6868b\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"9ad854a064d4f0f44a7bc2d108c92361\",\"type\":2},\"prefab\":{\"fileID\":919132149155446097,\"guid\":\"0a7e40c7289cbac41b1774a57f0217ed\",\"type\":3}}]}}"
             }
         ]
     }
