Parallax = added grass and plants + it's moving hehe

--- a/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -109,7 +109,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"9ad854a064d4f0f44a7bc2d108c92361\",\"type\":2},\"prefab\":{\"fileID\":4307827585362390263,\"guid\":\"780b9364b01d9764b9cf5a0953843800\",\"type\":3}}]}}"
             }
         ]
     }
